2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Instructions.c (InitCom):
	(MyWarpPointer):
	fixed a compile problem on dec-osf5

2002-03-04  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
	* FvwmTaskBar/Start.c (StartButtonParseConfig):
	(StartButtonInit):
	implemented bottun geometry variables as in FvwmButtons

	* FvwmButtons/parse.c (ParseButton):
	* FvwmButtons/FvwmButtons.c (GetButtonAction):
	(Loop):
	use the new function module_expand_action

	* FvwmButtons/FvwmButtons.c (Loop):
	fixed potential core dump

	* FvwmIconBox/FvwmIconBox.c (main):
	* FvwmWinList/FvwmWinList.c (main):
	* FvwmTaskBar/Goodies.c (HandleMailClick):
	* FvwmTaskBar/FvwmTaskBar.c:
	(LoopOnEvents):
	(main):
	(ProcessMessage):
	Use SendText instead of SendFvwmPipe in several places

2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmM4/FvwmM4.c (m4_defs):
	* FvwmCpp/FvwmCpp.c (cpp_defs):
	printf file name in error message

2002-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (parse_message_line):
	update the shape w/ transparent background when changind the button
	title or icon

2002-02-27  Mikhael Goikhman  <migo@homemail.com>

	* FvwmRearrange/FvwmRearrange.c:
	* FvwmRearrange/FvwmRearrange.1:
	New arguments -maximize, -nomaximize, -animate, -noanimate.
	Do Resize/Move in one command. Take outside duplicated code.

2002-02-26  olicha  <olivier.chapuis@free.fr>

	* FvwmPager/Makefile.am:
	* FvwmWinList/Makefile.am:
	* FvwmScript/Makefile.am:
	* FvwmIdent/Makefile.am:
	* FvwmIconMan/Makefile.am:
	* FvwmIconBox/Makefile.am:
	* FvwmForm/Makefile.am:
	* FvwmButtons/Makefile.am:
	* FvwmTaskBar/Makefile.am:
	Added Xft_LIBS, Xft_CFLAGS, FT2_CFLAGS and FT2_LIBS

	* FvwmIconMan/xmanager.c (draw_button):
	Did so that the buttons title fit into the buttons if a xftfont is
	used

	* FvwmButtons/draw.c (RedrawButton):
	* FvwmIdent/FvwmIdent.c (RedrawWindow):
	* FvwmPager/x_pager.c (do_label_window):
	(DrawGrid):