@@ -928,7 +928,8 @@ static void PutDataInForm(char *cp)
         strcpy(item->input.init_value,cp); /* new initial value in field */
 	if (item->input.value)
 	  free(item->input.value);
-        item->input.value = safemalloc(var_len+1);
+        item->input.buf = var_len+1;
+        item->input.value = safemalloc(item->input.buf);
         strcpy(item->input.value,cp);     /* new value in field */
         /* New value, but don't change length */
         free(var_name);                 /* goto's have their uses */
