@@ -1,3 +1,9 @@
+2002-03-08  Dan Espen  <dane@mk.telcordia.com>
+
+	* FvwmForm/ReadXServer.c: Some comments.
+	* FvwmForm/FvwmForm.c (PutDataInForm): Update buffer length when
+	input data read from form.  Fixes core.
+
 2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmScript/Instructions.c (InitCom):
